src/riot-rs-macros/tests/ui/config_missing_kind.stderr
error: custom attribute panicked
 --> tests/ui/config_missing_kind.rs:9:1
  |
9 | #[riot_rs::config]
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: message: a configuration kind must be specified
